libs/domain_macros/derive_entity/tests/ui/fail_missing_attr.stderr
error: #[entity_id] attribute is required
 --> tests/ui/fail_missing_attr.rs:3:10
  |
3 | #[derive(Entity)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
