libs/domain_macros/derive_entity/tests/ui/fail_missing_attr.rs
use domain_macros::Entity;

#[derive(Entity)]
struct User {
    id: i32, // 属性をつけ忘れた
    name: String,
}

fn main() {}